[SCN-60] Эндпоинты ../sign-out и ../logout Добавлены эндпоинты для выхода с одного/всех устройств Написана swagger документация для новых эндпоинтов, так же небольшие изменения для существовавших Для новых эндпоинтов написана middleware часть Изменена логика для эндпоинтов ../sign-in и ../refresh, теперь учитывается UserAgent(заголовок) В таблицу users_sessions добавлен столбик UserAgent
